bugs_03 - alignment of the title in the dailyCalendar is changed

--- a/src/CalendarPage.css
+++ b/src/CalendarPage.css
@@ -105,4 +105,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: larger;
+    font-weight: bold;
 }
